--- a/server.conf
+++ b/server.conf
@@ -1,7 +1,7 @@
 % The tcp port the server binds to.
 {port, 25565}.
 
-{description, "a ...err... lang server! :-)"}.
+{description, "a ...err... lang server!"}.
 
 {motd, "Welcome to mc-erl, a custom Minecraft server written in Erlang! Feel free to build anything!"}.
 
