License is now GPLv3, nbt.erl moved out as a dependency

--- a/rebar.config
+++ b/rebar.config
@@ -1,3 +1,6 @@
 {deps, [
-	{cutkey, ".*", {git, "git://github.com/andrewtj/cutkey.git", "1737b33a4da18db6cff49e3a5fc3cdafbad3d0b6"}}
+    {cutkey, ".*", {git, "git://github.com/andrewtj/cutkey.git",
+                         "1737b33a4da18db6cff49e3a5fc3cdafbad3d0b6"}},
+    {cheatcraft, ".*", {git, "git://github.com/lordnull/CheatCraft.git",
+                             "4d6dcf881218abce0c69cf07b184127c6a1dfd7e"}}
 ]}.
