--- a/rebar.config
+++ b/rebar.config
@@ -1,6 +1,6 @@
 {deps, [
-    {cutkey, ".*", {git, "git://github.com/andrewtj/cutkey.git",
-                         "1737b33a4da18db6cff49e3a5fc3cdafbad3d0b6"}},
+    {cutkey, ".*", {git, "git://github.com/brverbur/cutkey.git",
+                         "599eb463cd5f6f024e182d4bca11f4189d0cf6c9"}},
     {cheatcraft, ".*", {git, "git://github.com/lordnull/CheatCraft.git",
                              "4d6dcf881218abce0c69cf07b184127c6a1dfd7e"}}
 ]}.
