use lager for logging

--- a/rebar.config
+++ b/rebar.config
@@ -1,6 +1,12 @@
 {deps, [
+    {lager, "2.0.3", {git, "git://github.com/basho/lager.git",
+                           "b6b6cebcb27ccff8acc59ae775acebc2f52e4926"}},
     {cutkey, ".*", {git, "git://github.com/brverbur/cutkey.git",
                          "599eb463cd5f6f024e182d4bca11f4189d0cf6c9"}},
     {cheatcraft, ".*", {git, "git://github.com/lordnull/CheatCraft.git",
                              "4d6dcf881218abce0c69cf07b184127c6a1dfd7e"}}
+]}.
+
+{erl_opts, [
+        {parse_transform, lager_transform}
 ]}.
